--- a/src/features/homepage/style.css
+++ b/src/features/homepage/style.css
@@ -1,3 +1,13 @@
 .full-width {
   width: 100%;
 }
+
+.flex-box {
+  width: 100%;
+  align-self: center;
+}
+
+.border-primary {
+  width: 310px;
+  
+}
