adding functionality for database/task list

--- a/src/components/card/styles.css
+++ b/src/components/card/styles.css
@@ -2,6 +2,13 @@
   padding: 32px 12px;
   border: 1px solid red;
   width: 30%;
-  height: 200px;
 }
 
+
+.venue-item.over {
+  border: 1px solid blue;
+}
+
+.venue-item {
+  border: 1px solid transparent;
+}
