moved login/logout button and made task list function properly

--- a/src/features/homepage/style.css
+++ b/src/features/homepage/style.css
@@ -36,6 +36,7 @@ h5 {
 
 .page-footer {
   background-color: rgba(156, 92, 124, 0.404);
+  background-color: #F8F9FA
 }
 
 /* .navbar-expand-lg navbar-light bg-light {
